Use Java 17 language level constructs: pattern matching for instanceof, text blocks, String.formatted